--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    googlea9face66febede08.html
 
     <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
