--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,12 @@
       rel="stylesheet"
     />
     <title>React App</title>
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto');
+      ga('send', 'pageview');
+      </script>
+      <script async src='https://www.google-analytics.com/analytics.js'></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
