--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="movies endolf"
+      content="a movie list website"
     />
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
