fix buttons details and spanglish

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     />
     
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="trLcgK5gOzyKAsJuFWPT_F5jJhaCMN-5457oD3YM4p8" />
     <meta
       name="movies endolf"
       content="a movie list website"
