--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="trLcgK5gOzyKAsJuFWPT_F5jJhaCMN-5457oD3YM4p8" />
+    <meta name="description" content=" movie list website , lista de peliculas de Endolf, ver peliculas de Endolf " data-rh="true"/>
     <meta
       name="movies endolf"
       content="a movie list website"
