--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body style="padding: 0px;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Lista de peliculas de Endolf para practicar.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
