seo fix 2 emergency

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       name="movies endolf"
       content="a movie list website"
     />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
