--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Endolfs Movies</title>
+    <h1>Endolfs Movies</h1>
     <script>
       window.ga =
         window.ga ||
@@ -62,7 +62,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body style="padding: 0px;">
-    <noscript>Lista de peliculas de Endolf para practicar.</noscript>
+    <noscript>Lista de peliculas de Endolf para practica, movies Endolfs, endolfs movie, movie list Endolf</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
