resposive and fix login

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="../src/componentes/images/logo.jpeg"
+      href="https://img.freepik.com/vector-premium/diseno-logotipo-camara-video-vintage-produccion-peliculas-cine_227744-487.jpg"
     />
     
     <meta name="theme-color" content="#000000" />
