--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://img.freepik.com/vector-premium/diseno-logotipo-camara-video-vintage-produccion-peliculas-cine_227744-487.jpg"
+      href="./src/componentes/images/logo.jpeg"
     />
-    
+
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="trLcgK5gOzyKAsJuFWPT_F5jJhaCMN-5457oD3YM4p8" />
-    <meta name="description" content=" movie list website , lista de peliculas de Endolf, ver peliculas de Endolf " data-rh="true"/>
     <meta
-      name="movies endolf"
-      content="a movie list website"
+      name="google-site-verification"
+      content="trLcgK5gOzyKAsJuFWPT_F5jJhaCMN-5457oD3YM4p8"
     />
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    
+    <meta
+      name="description"
+      content=" movie list website , lista de peliculas de Endolf, ver peliculas de Endolf "
+      data-rh="true"
+    />
+    <meta name="movies endolf" content="a movie list website" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -47,7 +51,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-   
+
     <script>
       window.ga =
         window.ga ||
@@ -59,10 +63,18 @@
       ga("send", "pageview");
     </script>
     <script async src="https://www.google-analytics.com/analytics.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
-  <body style="padding: 0px;">
-    <noscript>Lista de peliculas de Endolf para practica, movies Endolfs, endolfs movie, movie list Endolf</noscript>
+  <body style="padding: 0px">
+    <noscript
+      >Lista de peliculas de Endolf para practica, movies Endolfs, endolfs
+      movie, movie list Endolf</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -74,7 +86,15 @@
         To begin the development, run `npm start` or `yarn start`.
         To create a production bundle, use `npm run build` or `yarn build`.
       -->
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
